--- a/index.html
+++ b/index.html
@@ -7,23 +7,68 @@
   <script src="https://unpkg.com/react-dom@17.0.2/umd/react-dom.production.min.js"></script>
   <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
   <script type="text/babel">
-    const root = document.getElementById("root");
-    let counter = 0;
-    function countUp() {
-      counter = counter + 1;
-      render();
-    }
-    function render() {
-      ReactDOM.render(<Container />, root);
-    }
-    function Container() {
+    function MinutesToHours(){
+      const [amount, setAmount] = React.useState();
+      const [inverted, setInverted] = React.useState(false);
+      const onChange = (event) => {
+        setAmount(event.target.value);
+      }
+      const reset = () => setAmount(0);
+      const onFlip = () => {
+        reset();
+        setInverted((current) => !current);
+      }
       return (
         <div>
-          <h3>total clicks: {counter}</h3>
-          <button onClick={countUp}>click me</button>
+          <div>
+            <label htmlFor="minutes">minutes</label>
+            <input 
+              value = {inverted ? amount * 60 : amount}
+              id="minutes"
+              type="number"
+              placeholder="minutes" 
+              onChange={onChange}
+              disabled = {inverted}
+            />
+          </div>
+          <div>
+            <h4>you want to convert {amount}</h4>
+            <label htmlFor="hours">hours</label>
+            <input 
+              value={inverted ?  amount : Math.round(amount / 60)}
+              id="hours" 
+              type="number" 
+              placeholder="hours" 
+              onChange={onChange}
+              disabled = {!inverted}
+            />
+          </div>
+          <button onClick={reset}>Reset</button>
+          <button onClick={onFlip}>{inverted ? "min to hr" : "hr to min"}</button>
         </div>
       );
     }
-    render();
+    function KphToMph(){
+      return(
+        <h3>kph to mph</h3>
+      );
+    }
+    function App(){
+      const [index, setIndex] = React.useState(0)
+      const onSelect = (event) => {
+        console.log(event.target.value);
+      }
+      return (
+        <div>
+          <h1>super converter</h1>
+          <select onChange={onSelect}>
+            <option value="0">min & hr</option>
+            <option value="1">kph & mph</option>
+          </select>
+        </div>
+      );
+    }
+    const root = document.getElementById("root");
+    ReactDOM.render(<App />, root);
   </script>
 </html>
