--- a/index.html
+++ b/index.html
@@ -7,105 +7,29 @@
   <script src="https://unpkg.com/react-dom@17.0.2/umd/react-dom.production.min.js"></script>
   <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
   <script type="text/babel">
-    function MinutesToHours(){
-      const [amount, setAmount] = React.useState();
-      const [inverted, setInverted] = React.useState(false);
-      const onChange = (event) => {
-        setAmount(event.target.value);
-      }
-      const reset = () => setAmount(0);
-      const onFlip = () => {
-        reset();
-        setInverted((current) => !current);
-      }
+    function Btn({text, changeValue}){
+      console.log(text, "was rendered");
       return (
-        <div>
-          <div>
-            <label htmlFor="minutes">minutes</label>
-            <input 
-              value = {inverted ? amount * 60 : amount}
-              id="minutes"
-              type="number"
-              placeholder="minutes" 
-              onChange={onChange}
-              disabled = {inverted}
-            />
-          </div>
-          <div>
-            <h4>you want to convert {amount}</h4>
-            <label htmlFor="hours">hours</label>
-            <input 
-              value={inverted ?  amount : Math.round(amount / 60)}
-              id="hours" 
-              type="number" 
-              placeholder="hours" 
-              onChange={onChange}
-              disabled = {!inverted}
-            />
-          </div>
-          <button onClick={reset}>Reset</button>
-          <button onClick={onFlip}>{inverted ? "min to hr" : "hr to min"}</button>
-        </div>
-      );
-    }
-    function KphToMph(){
-      const [amount, setAmount] = React.useState();
-      const [inverted, setInverted] = React.useState(false);
-      const onChange = (event) => {
-        setAmount(event.target.value);
-      }
-      const reset = () => setAmount(0);
-      const onFlip = () => {
-        reset();
-        setInverted((current) => !current);
-      }
-      return (
-        <div>
-          <div>
-            <label htmlFor="kph">kph</label>
-            <input 
-              value = {inverted ? amount * 1.609344 : amount}
-              id="kph"
-              type="number"
-              placeholder="kph" 
-              onChange={onChange}
-              disabled = {inverted}
-            />
-          </div>
-          <div>
-            <h4>you want to convert {amount}</h4>
-            <label htmlFor="mph">mph</label>
-            <input 
-              value={inverted ?  amount : Math.round(amount / 1.609344)}
-              id="mph" 
-              type="number" 
-              placeholder="mph" 
-              onChange={onChange}
-              disabled = {!inverted}
-            />
-          </div>
-          <button onClick={reset}>Reset</button>
-          <button onClick={onFlip}>{inverted ? "kph to mph" : "mph to kph"}</button>
-        </div>
-      );
-    }
+        <button
+          onClick={changeValue}
+          style={{
+            backgroundColor: "tomato",
+            color: "white",
+            padding:"10px 20px",
+            borderRadius: 10, 
+            border: 0,
+          }}
+        >
+        {text}</button>
+    )}
+    const MemorizedBtn = React.memo(Btn)
     function App(){
-      const [index, setIndex] = React.useState("0")
-      const onSelect = (event) => {
-        setIndex(event.target.value);
-      }
+      const [value, setValue] = React.useState("Save Changed");
+      const changeValue = () => setValue("Revert Changes");
       return (
         <div>
-          <h1>super converter</h1>
-          <select value={index} onChange={onSelect}>
-            <option value="xx">select your units</option>
-            <option value="0">min & hr</option>
-            <option value="1">kph & mph</option>
-          </select>
-          <hr />
-          {index === "xx" ? "please select your units" : null}
-          {index === "0" ? <MinutesToHours /> : null}
-          {index === "1" ? <KphToMph /> : null}
+          <MemorizedBtn text={value} changeValue={changeValue} />
+          <MemorizedBtn text="Continue" />
         </div>
       );
     }
