--- a/index.html
+++ b/index.html
@@ -3,33 +3,34 @@
   <body>
     <div id="root"></div>
   </body>
-  <script src="https://unpkg.com/react@17.0.2/umd/react.production.min.js"></script>
-  <script src="https://unpkg.com/react-dom@17.0.2/umd/react-dom.production.min.js"></script>
+  <script src="https://unpkg.com/react@17.0.2/umd/react.development.js"></script>
+  <script src="https://unpkg.com/react-dom@17.0.2/umd/react-dom.development.js"></script>
+  <script src="https://unpkg.com/prop-types@15.7.2/prop-types.js"></script>
   <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
   <script type="text/babel">
-    function Btn({text, changeValue}){
-      console.log(text, "was rendered");
+    function Btn({text, fontSize = 16}){
       return (
         <button
-          onClick={changeValue}
           style={{
             backgroundColor: "tomato",
             color: "white",
             padding:"10px 20px",
             borderRadius: 10, 
             border: 0,
+            fontSize,
           }}
         >
         {text}</button>
     )}
-    const MemorizedBtn = React.memo(Btn)
+    Btn.propTypes = {
+      text: PropTypes.string.isRequired,
+      fontSize: PropTypes.number.isRequired,
+    };
     function App(){
-      const [value, setValue] = React.useState("Save Changed");
-      const changeValue = () => setValue("Revert Changes");
       return (
         <div>
-          <MemorizedBtn text={value} changeValue={changeValue} />
-          <MemorizedBtn text="Continue" />
+          <Btn text="Save Changes" fontSize={18}/>
+          <Btn text="errorrrrr" />
         </div>
       );
     }
